Fixed invisible css selector

--- a/styles/base.less
+++ b/styles/base.less
@@ -300,7 +300,7 @@ atom-text-editor .search-results .marker.current-result .region,
   }
 
   &.selector {
-    color: @syntax-selection-color;
+    color: @syntax-var-color;
   }
 
   &.separator {
